--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,13 @@ img, video {
 
 header {
   background: #fff;
-  padding: 1rem 2rem;
+  padding: 1rem 4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #e0e0e0;
   flex-wrap: wrap;
+  position: relative;
 }
 header .logo {
   font-size: 1.5rem;
@@ -43,38 +44,34 @@ header .logo {
 }
 header .search-box {
   position: relative;
-  flex: 1;
-  max-width: 400px;
-  margin: 1rem 0;
-  order: 3;
+  display: flex;
+  align-items: center;
+  width: 320px;
+  margin-left: auto;
 }
 header .search-box input {
-  width: 100%;
-  padding: 0.5rem 2.5rem 0.5rem 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 0.9rem;
+  border-radius: 50px;
+  padding: 0.5rem 4rem 0.5rem 1rem;
+  flex-grow: 1;
 }
-header .search-box .fa-search {
+header .search-box::after {
+  content: "\f002";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
   position: absolute;
-  right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-  color: #999;
-}
-@media (min-width: 768px) {
-  header .search-box {
-    order: 2;
-    margin: 0 2rem;
-  }
+  right: 1.25rem;
+  font-size: 1.2rem;
+  color: #e0e0e0;
+  pointer-events: none;
 }
 header .user {
+  position: relative;
   display: flex;
   align-items: center;
   font-size: 0.9rem;
-  position: relative;
-  order: 2;
-  margin-left: auto;
+  margin-left: 2rem;
 }
 header .user img {
   width: 32px;
@@ -85,6 +82,16 @@ header .user img {
 header .user .user-name {
   position: relative;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+}
+header .user .user-name span:first-child {
+  font-size: 0.8rem;
+  color: #e0e0e0;
+}
+header .user .user-name span:last-child {
+  font-weight: 600;
 }
 header .user .user-name .dropdown-toggle {
   margin-left: 0.25rem;
@@ -115,9 +122,14 @@ header .user .user-name .dropdown-menu li a:hover {
 header .user .user-name.open .dropdown-menu {
   display: block;
 }
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+  header .search-box {
+    width: 100%;
+    right: 1rem;
+    margin-left: 0;
+  }
   header .user {
-    order: 3;
+    margin-left: 1rem;
   }
 }
 
