--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -42,12 +42,13 @@ img, video {
 
 header {
   background: #fff;
-  padding: 1rem 2rem;
+  padding: 1rem 4rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid $medium-gray;
   flex-wrap: wrap;
+  position: relative;
 
   .logo {
     font-size: 1.5rem;
@@ -57,40 +58,37 @@ header {
 
   .search-box {
     position: relative;
-    flex: 1;
-    max-width: 400px;
-    margin: 1rem 0;
-    order: 3;
+    display: flex;
+    align-items: center;
+    width: 320px;
+    margin-left: auto;
 
     input {
-      width: 100%;
-      padding: 0.5rem 2.5rem 0.5rem 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 0.9rem;
+      border-radius: 50px;
+      padding: 0.5rem 4rem 0.5rem 1rem;
+      flex-grow: 1;
     }
 
-    .fa-search {
+    &::after {
+      content: "\f002";
+      font-family: "Font Awesome 6 Free";
+      font-weight: 900;
       position: absolute;
-      right: 1rem;
       top: 50%;
       transform: translateY(-50%);
-      color: #999;
-    }
-
-    @media (min-width: $bp-md) {
-      order: 2;
-      margin: 0 2rem;
+      right: 1.25rem;
+      font-size: 1.2rem;
+      color: $medium-gray;
+      pointer-events: none;
     }
   }
 
   .user {
+    position: relative;
     display: flex;
     align-items: center;
     font-size: 0.9rem;
-    position: relative;
-    order: 2;
-    margin-left: auto;
+    margin-left: 2rem;    // garante espaçamento após a search-box
 
     img {
       width: 32px;
@@ -102,8 +100,22 @@ header {
     .user-name {
       position: relative;
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      line-height: 1.2;
 
-      .dropdown-toggle { margin-left: 0.25rem; }
+      span:first-child {
+        font-size: 0.8rem;
+        color: $medium-gray;
+      }
+
+      span:last-child {
+        font-weight: 600;
+      }
+
+      .dropdown-toggle {
+        margin-left: 0.25rem;
+      }
 
       .dropdown-menu {
         position: absolute;
@@ -136,12 +148,20 @@ header {
         display: block;
       }
     }
+  }
 
-    @media (min-width: $bp-md) {
-      order: 3;
+  @media (max-width: $bp-md) {
+    .search-box {
+      width: 100%;
+      right: 1rem;
+      margin-left: 0;   // volta ao fluxo normal em mobile
+    }
+    .user {
+      margin-left: 1rem;
     }
   }
 }
+
 
 .slider {
   position: relative;
